Positioned the switched better and fixed spacing between translations.

--- a/MIDIator.WebClient/app/src/scss.scss
+++ b/MIDIator.WebClient/app/src/scss.scss
@@ -116,9 +116,9 @@ $dropdown-bg-ul-li-color: $custom-almost-black-full;
 	background-image: linear-gradient(to right, unquote("rgba(#{$color-primary}, 0.0)"), unquote("rgba(#{$color-accent}, 0.5)"), unquote("rgba(#{$color-primary}, 0.0)"));
 }
 
-.tranlation-spacer {
-	margin-bottom: 75px;
-	margin-top: 75px;
+.translation-spacer {
+	margin-bottom: 65px;
+	margin-top: 65px;
 }
 
 .transformation-separator {
