--- a/MIDIator.WebClient/app/src/styles.css
+++ b/MIDIator.WebClient/app/src/styles.css
@@ -40,25 +40,30 @@ body {
     width: 90%;
 }
 
+
 .button-container {
-    height: 75%;
+    height: 24px;
     display: flex;
     flex-direction: row;
 }
 
-    .button-container > * {
+.button-container-title {
+	height: 75%;
+}
+
+    .button-container > * , .button-container-title > *{
         align-self: center;
         margin-left: 10px;
         margin-right: 10px;
     }
 
-    .button-container > button {
+    .button-container > button , .button-container-title > button {
         align-self: flex-end;
     }
 
-    .button-container > mdl-switch {
+    .button-container > mdl-switch , .button-container-title > mdl-switch {
         margin-left: 15px;
-        margin-right: 15px;
+        margin-right: 25px;
         height: 32px;
     }
 
